NetBSD Problem Report #50710

From www@NetBSD.org  Tue Jan 26 08:52:49 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id D22827A211
	for <gnats-bugs@gnats.NetBSD.org>; Tue, 26 Jan 2016 08:52:49 +0000 (UTC)
Message-Id: <20160126085248.CE5987ACC4@mollari.NetBSD.org>
Date: Tue, 26 Jan 2016 08:52:48 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/distrib/utils/more/os.c:240]: (error) Memory leak: cmd
X-Send-Pr-Version: www-1.0

>Number:         50710
>Category:       misc
>Synopsis:       src/distrib/utils/more/os.c:240]: (error) Memory leak: cmd
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    misc-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Jan 26 08:55:00 +0000 2016
>Closed-Date:    Tue Jan 26 16:09:17 +0000 2016
>Last-Modified:  Tue Jan 26 16:09:17 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160125
>Organization:
>Environment:
>Description:
Source code is

    if ((f = popen(cmd, "r")) == NULL)
        return (filename);

Something like

    if ((f = popen(cmd, "r")) == NULL)
    {
        free(cmd);
        return (filename);
    }

might be a suitable replacement.
>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50710 CVS commit: src/distrib/utils/more
Date: Tue, 26 Jan 2016 11:04:12 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Tue Jan 26 16:04:12 UTC 2016

 Modified Files:
 	src/distrib/utils/more: os.c

 Log Message:
 PR/50710: David Binderman: Fix memory leak.


 To generate a diff of this commit:
 cvs rdiff -u -r1.8 -r1.9 src/distrib/utils/more/os.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Tue, 26 Jan 2016 16:09:17 +0000
State-Changed-Why:
Christos fixed it, thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.