PR/50710: David Binderman: Fix memory leak.